docs/resources/next-attempt/bridge-route-update.yaml
# Update bridge route to use the serving certificate generated by OpenShift service CA
# The cert is stored in Secret ecifm-sso-bridge-tls in namespace ecifm-sso-bridge
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: ecifm-sso-bridge
    app.kubernetes.io/component: ecifm-sso-bridge
    app.kubernetes.io/instance: ecifm-sso-bridge
    app.kubernetes.io/name: ecifm-sso-bridge
  name: ecifm-sso-bridge
  namespace: ecifm-sso-bridge
spec:
  host: ecifm-sso-bridge-ecifm-sso-bridge.apps.npos2.ecifmdev.net
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    key: ''
    certificate: ''
    caCertificate: ''
    # Use the serving cert generated by OpenShift service CA
    # This cert is signed by the service CA which we're adding to Liberty's truststore
    reference:
      name: ecifm-sso-bridge-tls
      namespace: ecifm-sso-bridge
  to:
    kind: Service
    name: ecifm-sso-bridge
    weight: 100
  wildcardPolicy: None
